# Persona_AI

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  plan.md  pyproject.toml  run_fastapi.py
docs/: e2e-test-scenarios.md  host-integration-guide.md  operations-runbook.md  release-baseline-checklist.md
openspec/changes/archive/2026-04-01-enhance-persona-memory-plan/: design.md  proposal.md  tasks.md
openspec/specs/layered-memory-lifecycle/: spec.md
openspec/specs/memory-evolution-observability/: spec.md
openspec/specs/persona-evaluation-gates/: spec.md
openspec/specs/persona-plugin-portability/: spec.md
openspec/specs/persona-privacy-governance/: spec.md
src/persona_ai/: __init__.py  access_policy.py  adapter_validation.py  audit.py  chat_contract.py  chat_orchestration.py  confidence.py  config.py  conflict_resolution.py  database_schema.py  distillation_worker.py  embedding.py  episodic_store_qdrant.py  evaluation.py  extraction.py  fastapi_app.py  memory_events.py  migrate.py  models.py  online.py  persona_visualization.py  plugin_contract.py  plugin_example.py  privacy.py  profile_manager.py  prompt_builder.py  provider_adapters.py  retry_queue.py  semantic_store_neo4j.py  storage.py
tests/: test_chat_memory_visualization.py  test_core.py  test_database_schema.py  test_fastapi_endpoints.py  test_portability_privacy_eval.py
web/: .env.example  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/components/: WordCloud.tsx  types.ts
web/app/lib/: api.ts
(+10 files in other folders)
