[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-ai"
version = "0.1.0"
description = "Three-layer persona memory reference implementation"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn>=0.30.0",
	"python-dotenv>=1.0.1",
	"pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
